--- a/app/src/main/res/layout/bookings_list.xml
+++ b/app/src/main/res/layout/bookings_list.xml
@@ -26,10 +26,10 @@
 
             <ImageView
                 android:id="@+id/imgTalentDisplayPhoto"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="15dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
                 android:clickable="true"
                 android:src="@drawable/no_profile_pic"
                 android:focusable="true"
@@ -37,46 +37,16 @@
 
             <TextView
                 android:id="@+id/lblTalentFullname"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/imgTalentDisplayPhoto"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
-                android:layout_marginBottom="5dp"
-                android:textSize="19sp"
+                android:textSize="17sp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:gravity="start"
                 android:text="Talent Fullname"
-                card_view:ignore="HardcodedText" />
-
-            <TextView
-                android:id="@+id/lblTalentRatePerHour"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/imgTalentDisplayPhoto"
-                android:layout_below="@id/lblTalentFullname"
-                android:paddingStart="5dp"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:gravity="start"
-                android:text="Rate Per Hour"
-                card_view:ignore="HardcodedText,RtlSymmetry" />
-
-            <TextView
-                android:id="@+id/lblTalentCategories"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/imgTalentDisplayPhoto"
-                android:layout_below="@id/lblTalentRatePerHour"
-                android:layout_marginStart="5dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/textview_border_style_color_primary"
-                android:textStyle="bold"
-                android:textSize="15sp"
-                android:padding="8dp"
-                android:textColor="@color/colorPrimaryDarker"
-                android:text="Categories"
                 card_view:ignore="HardcodedText" />
 
             <TextView
@@ -86,8 +56,7 @@
                 android:layout_below="@id/imgTalentDisplayPhoto"
                 android:paddingStart="5dp"
                 android:drawableStart="@drawable/ic_schedule_black"
-                android:layout_marginTop="5dp"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textColor="@color/black"
                 android:gravity="start"
                 android:text="Preferred Date"
@@ -102,7 +71,7 @@
                 android:drawableStart="@drawable/ic_date_range_black"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textColor="@color/black"
                 android:gravity="start"
                 android:text="Preferred Time"
@@ -117,7 +86,7 @@
                 android:drawableStart="@drawable/ic_my_location_black"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textColor="@color/black"
                 android:gravity="start"
                 android:text="Preferred Venue"
@@ -130,23 +99,51 @@
                 android:layout_below="@id/lblBookingPreferredVenue"
                 android:paddingStart="5dp"
                 android:layout_marginTop="5dp"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textColor="@color/black"
                 android:gravity="start"
                 android:text="Booking Other Details"
                 card_view:ignore="HardcodedText,RtlSymmetry" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnMoreDetails"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/lblBookingOtherDetails"
-                android:layout_marginTop="10dp"
-                android:background="@color/colorPrimary"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:text="More Details"
-                card_view:ignore="HardcodedText" />
+                android:orientation="horizontal"
+                android:layout_below="@id/lblBookingOtherDetails"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="10dp">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnTalentDetails"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/orange"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:layout_marginStart="5dp"
+                    android:drawableLeft="@drawable/ic_info_black"
+                    android:padding="10dp"
+                    android:textSize="12sp"
+                    android:text="Talent Details"
+                    card_view:ignore="HardcodedText" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnAddTalentReviews"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/red"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:layout_marginStart="10dp"
+                    android:drawableLeft="@drawable/ic_rate_review_black"
+                    android:padding="10dp"
+                    android:textSize="12sp"
+                    android:text="Add Reviews"
+                    card_view:ignore="HardcodedText" />
+
+            </LinearLayout>
+
+
 
         </RelativeLayout>
 
