--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -100,16 +100,16 @@
             android:textColor="#ffffff"
             android:background="@drawable/rounded_buttons"/>
 
-        <TextView
-            android:id="@+id/btnGoToForgotPasswordPage"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/forgot_password_button"
-            android:gravity="center"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"/>
+        <!--<TextView-->
+            <!--android:id="@+id/btnGoToForgotPasswordPage"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--android:text="@string/forgot_password_button"-->
+            <!--android:gravity="center"-->
+            <!--android:textSize="18sp"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textColor="@color/white"/>-->
     </LinearLayout>
 
     <LinearLayout
@@ -130,17 +130,30 @@
             android:textSize="17sp" />
 
         <TextView
-            android:id="@+id/btnGoToSignUpPage"
+            android:id="@+id/btnGoToIndividualClientRegistration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|bottom"
             android:gravity="center|bottom"
-            android:text="@string/sign_up_button"
+            android:text="@string/individual_client_reg"
             android:textSize="19sp"
             android:textStyle="bold"
             android:textColor="@color/white"
             android:background="@drawable/underline_labels"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="5dp"/>
+
+        <TextView
+            android:id="@+id/btnGoToCompanyClientRegistration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|bottom"
+            android:gravity="center|bottom"
+            android:text="@string/company_client_reg"
+            android:textSize="19sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:background="@drawable/underline_labels"
+            android:layout_marginBottom="10dp"/>
 
         <TextView
             android:id="@+id/lblAppVersion"
