--- a/app/src/main/res/layout/activity_set_booking_details.xml
+++ b/app/src/main/res/layout/activity_set_booking_details.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activities.SetBookingDetailsActivity">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".activities.SetBookingDetailsActivity"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -24,116 +25,142 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <com.riyagayasen.easyaccordion.AccordionView
-                        android:id="@+id/accordionPreferredDate"
+                    <ImageView
+                        android:id="@+id/imgTalentDisplayPhoto"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="15dp"
+                        android:clickable="true"
+                        android:src="@drawable/no_profile_pic"
+                        android:focusable="true"/>
+
+                    <customfonts.MyTextView
+                        android:id="@+id/lblTalentFullname"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:visibility="visible"
-                        app:isAnimated="true"
-                        app:heading="Preferred Date"
-                        app:isExpanded="true"
-                        app:isPartitioned="true">
-
-                        <ListView
-                            android:id="@+id/listDateSchedule"
-                            android:layout_width="wrap_content"
-                            android:layout_height="200dp"
-                            android:textColor="@color/colorPrimary"
-                            android:choiceMode="multipleChoice"
-                            android:layout_marginBottom="10dp"/>
-
-                    </com.riyagayasen.easyaccordion.AccordionView>
-
-                    <com.riyagayasen.easyaccordion.AccordionView
-                        android:id="@+id/accordionPreferredTime"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/accordionPreferredDate"
-                        android:visibility="visible"
-                        app:isAnimated="true"
-                        app:heading="Preferred Time"
-                        app:isExpanded="false"
-                        app:isPartitioned="true">
-
-                        <ListView
-                            android:id="@+id/listTimeSchedule"
-                            android:layout_width="wrap_content"
-                            android:layout_height="200dp"
-                            android:textColor="@color/colorPrimary"
-                            android:choiceMode="multipleChoice"
-                            android:layout_marginBottom="10dp"/>
-
-                    </com.riyagayasen.easyaccordion.AccordionView>
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btnComputeTotal"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/accordionPreferredTime"
-                        android:layout_margin="5dp"
+                        android:layout_toEndOf="@id/imgTalentDisplayPhoto"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="5dp"
+                        android:textSize="19sp"
+                        android:textColor="@color/black"
                         android:textStyle="bold"
-                        android:text="Compute Total"
-                        android:textColor="@color/white"
-                        android:background="@color/colorPrimary"
-                        android:padding="8dp"
+                        android:gravity="start"
+                        android:text="Talent Fullname"
                         tools:ignore="HardcodedText" />
 
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btnSetBookingVenue"
+                    <customfonts.MyTextView
+                        android:id="@+id/lblTalentCategories"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/btnComputeTotal"
-                        android:layout_margin="5dp"
+                        android:layout_toEndOf="@id/imgTalentDisplayPhoto"
+                        android:layout_below="@id/lblTalentFullname"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="5dp"
+                        android:background="@drawable/textview_border_style_color_primary"
                         android:textStyle="bold"
-                        android:text="Set Booking Venue"
-                        android:textColor="@color/white"
-                        android:background="@color/orange"
+                        android:textSize="15sp"
                         android:padding="8dp"
+                        android:textColor="@color/colorPrimaryDarker"
+                        android:text="Categories"
                         tools:ignore="HardcodedText" />
 
-                    <TextView
+                    <customfonts.MyTextView
                         android:id="@+id/lblSelectedSchedule"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/btnSetBookingVenue"
-                        android:textSize="18sp"
-                        android:padding="10dp"
+                        android:layout_below="@id/imgTalentDisplayPhoto"
+                        android:text="Selected Schedule: N/A"
+                        android:textSize="21sp"
                         android:textColor="@color/black"
-                        android:text="Selected schedule: N/A"
+                        android:padding="10dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        tools:ignore="HardcodedText,InefficientWeight" />
+
+                    <EditText
+                        android:id="@+id/txtBookingEventTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="80sp"
+                        android:background="#d1d1d1"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:hint="Enter event title.."
+                        android:inputType="textFilter"
+                        android:layout_below="@id/lblSelectedSchedule"
+                        android:maxLength="50"
+                        android:textColor="@color/black"
+                        android:textSize="21sp"
+                        android:singleLine="true"
+                        android:padding="10dp"
+                        android:gravity="top"
+                        android:layout_marginBottom="10dp"
+                        android:textColorHint="@color/black"
                         tools:ignore="HardcodedText" />
 
-                    <TextView
-                        android:id="@+id/lblBookingVenueCaption"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/lblSelectedSchedule"
-                        android:textSize="18sp"
-                        android:padding="10dp"
+                    <EditText
+                        android:id="@+id/txtBookingVenueOrLocation"
+                        android:layout_width="match_parent"
+                        android:layout_height="160sp"
+                        android:background="#d1d1d1"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:hint="Enter venue/location.."
+                        android:inputType="textFilter"
+                        android:singleLine="true"
+                        android:layout_below="@id/txtBookingEventTitle"
+                        android:maxLength="100"
                         android:textColor="@color/black"
-                        android:text="Booking Venue"
+                        android:textSize="21sp"
+                        android:padding="10dp"
+                        android:gravity="top"
+                        android:layout_marginBottom="10dp"
+                        android:textColorHint="@color/black"
+                        tools:ignore="HardcodedText" />
+
+                    <me.abhinay.input.CurrencyEditText
+                        android:id="@+id/txtBookingTalentFee"
+                        android:layout_width="match_parent"
+                        android:layout_height="80sp"
+                        android:background="#d1d1d1"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_below="@id/txtBookingVenueOrLocation"
+                        android:hint="Enter talent fee.."
+                        android:inputType="number"
+                        android:textSize="21sp"
+                        android:padding="10dp"
+                        android:layout_gravity="top"
+                        android:textColorHint="@color/black"
+                        android:layout_marginBottom="30dp"
+                        tools:ignore="HardcodedText" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btnProceed"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:layout_below="@id/txtBookingTalentFee"
+                        android:background="@color/colorPrimary"
+                        android:padding="15dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="Proceed"
+                        android:textColor="@color/white"
+                        android:textSize="15sp"
+                        android:textStyle="bold"
                         tools:ignore="HardcodedText" />
 
                 </RelativeLayout>
 
             </ScrollView>
 
-
-
         </LinearLayout>
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnProceedToCheckout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:padding="15dp"
-            android:text="Proceed To Checkout"
-            android:textColor="@color/white"
-            android:layout_alignParentBottom="true"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            tools:ignore="HardcodedText" />
 
     </RelativeLayout>
 
