--- a/app/src/main/res/layout/bookings_list.xml
+++ b/app/src/main/res/layout/bookings_list.xml
@@ -69,7 +69,7 @@
                 android:id="@+id/lblBookingGeneratedId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/imgTalentDisplayPhoto"
+                android:layout_below="@id/lblTalentCategories"
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="10dp"
